# QLearning-tictactoe

./: .gitignore  README.md  play.py  pyproject.toml  train.py
saves/: agent_o_q_table.csv  agent_x_q_table.csv
scripts/: run_tests.sh
src/: exceptions.py
src/agents/: __init__.py  interface.py  qlearningagent.py
src/games/: __init__.py  tictactoe.py
src/persistence/: __init__.py  interface.py  qtable.py
tests/: conftest.py  test_board.py  test_cell.py  test_game.py  test_q_learning_agent.py  test_qtable.py
